--- a/scripts/core.conf
+++ b/scripts/core.conf
@@ -89,7 +89,7 @@
     "stop_seed_at_ratio": false,
     "stop_seed_ratio": 2.0,
     "super_seeding": false,
-    "torrentfiles_location": "/home/deluge/Downloads",
+    "torrentfiles_location": "/data/torrents",
     "upnp": true,
     "utpex": true
 }
