--- a/scripts/core.conf
+++ b/scripts/core.conf
@@ -8,7 +8,7 @@
     "auto_managed": true,
     "cache_expiry": 60,
     "cache_size": 512,
-    "copy_torrent_file": false,
+    "copy_torrent_file": true,
     "daemon_port": 58846,
     "del_copy_torrent_file": false,
     "dht": false,
