--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+        with:
+         ref: 'dev'
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
